Acesso à API, smooth scroll/scrollbar fixes, suporte a CORS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,11 +92,30 @@ body {
 
 .movie-container {
   width: 100%;
-  height: 200px;
+  height: 250px;
   align-items: center;
-  /* overflow-x: auto;
-  overflow-y: hidden; */
+  overflow-x: auto;
+  overflow-y: hidden;
   scroll-behavior: smooth;
+  display: flex;
+  -ms-overflow-style: none; /* IE 10+ */
+  scrollbar-width: none; /* Firefox x64 scrollbar fix */
+}
+
+body::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* Disable scrollbar Chrome/Safari/Webkit */
+}
+
+@-moz-document url-prefix() {
+  /* Firefox scrollbar fix*/
+  html {
+    scrollbar-width: none;
+  }
+}
+
+.movie-container::-webkit-scrollbar {
+  display: none;
 }
 
 .movie-category::-webkit-scrollbar {
@@ -111,12 +130,11 @@ body {
   margin-right: 10px;
   cursor: pointer;
   position: relative;
-  border: 1px solid red;
 }
 
 .movie img {
   width: 100%;
-  height: 150px;
+  height: 170px;
   object-fit: cover;
 }
 
